# oop_exercise_06

oop_exercise_06_2/oop_exercise_06_2/: CMakeLists.txt  Point.h  Trapezoid.h  my_allocator.h  oop_exercise_06_2.cpp  oop_exercise_06_2.h
oop_exercise_06_2/oop_exercise_06_2/containers/: queue.h
